# dev-amp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  developer-single.md  pyproject.toml
.devamp/domain/: context.md  devamp.md  roadmap.md
.devamp/knowledge/: architecture.md
.devamp/tasks/core-flow-overhaul/: metadata.json  qa-input.md  qa-session.md
.devamp/tasks/devamp-evolution/: qa-input.md  qa-session.md  spec.md  task-metadata.json
.devamp/tasks/devamp-root-path-in-context/: multi-plan.md  qa-input.md  qa-session.md  spec.md  system-analysis.md  task-metadata.json
.devamp/tasks/remove-single-repo-skip/: qa-input.md  qa-session.md  spec.md  task-metadata.json
.devamp/tasks/roadmap-backlog-on-dashboard/: multi-plan.md  qa-input.md  qa-session.md  task-metadata.json
_knowledge/devamp/: architecture.md
_specs/: devamp-mvp-cli.md  qa-input-0.1.0.md  qa-input-0.2.0.md  qa-session-2026-04-08.md
agents/: discovery.md  product.md  qa.md
skills/ui-ux/: SKILL.md
src/devamp/: __init__.py  cli.py  context.py  launcher.py  metadata.py  pipeline.py  routing.py  scanner.py
src/devamp/agents/: architect.md  dev.md  developer-multi.md  developer-single.md  developer-system.md  discovery.md  planner.md  product.md  qa.md
tests/: test_cli.py  test_context.py  test_launcher.py  test_metadata.py  test_pipeline.py  test_routing.py  test_scanner.py
