[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devamp"
version = "0.1.0"
description = "CLI orchestrator for AI agent pipeline"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
]

[project.scripts]
devamp = "devamp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/devamp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
